syntax = "proto3";

package ai.metathings.service.deviced;

import "validate/validate.proto";

import "model.proto";

message GetDescriptorRequest {
	OpDescriptor descriptor = 1 [(validate.rules).message.required = true];
}

message GetDescriptorResponse {
	Descriptor descriptor = 1;
}
